--- a/proyecto_empleo3.ipynb
+++ b/proyecto_empleo3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,11 @@
     "import pandas as pd\n",
     "from time import sleep\n",
     "import requests\n",
-    "import sqlite3"
+    "import sqlite3\n",
+    "from sklearn.cluster import KMeans\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "import nbformat"
    ]
   },
   {
@@ -1801,6 +1805,177 @@
    "outputs": [],
    "source": [
     "result_df.to_csv(\"finalResult.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                     Título                 Puesto Expertise  \\\n",
+      "0                              data analyst           Data Analyst   Regular   \n",
+      "1             business intelligence analyst  Business Intelligence   Regular   \n",
+      "2                          research analyst           Data Analyst   Regular   \n",
+      "3  senior program manager analyst relations           Data Analyst    Senior   \n",
+      "4                              data analyst           Data Analyst   Regular   \n",
+      "\n",
+      "  Empresa Modalidad Sector Ubicación  \\\n",
+      "0     NaN       NaN    NaN    Madrid   \n",
+      "1     NaN       NaN    NaN    Madrid   \n",
+      "2     NaN       NaN    NaN    Madrid   \n",
+      "3     NaN       NaN    NaN    Madrid   \n",
+      "4     NaN       NaN    NaN    Madrid   \n",
+      "\n",
+      "                                         Descripción  \\\n",
+      "0  Una empresa internacional y dinámica busca un ...   \n",
+      "1  An innovative edtech company is seeking a Busi...   \n",
+      "2  An established industry player is seeking a Re...   \n",
+      "3  Join a forward-thinking company at the forefro...   \n",
+      "4  Join a forward-thinking company as a Data Anal...   \n",
+      "\n",
+      "                                           Servicios Otro Idioma EntornoTEC  \\\n",
+      "0  ['Tarjeta de restaurante Seguro de salud Segur...         NaN        NaN   \n",
+      "1  ['Flexible hybrid work environment Comprehensi...         NaN        NaN   \n",
+      "2  ['Competitive benefits Career development oppo...         NaN        NaN   \n",
+      "3  ['Equity (Restricted Stock Units)Life Insuranc...         NaN        NaN   \n",
+      "4  ['Flexible working hours Health insurance Life...         NaN        NaN   \n",
+      "\n",
+      "  Beneficios                        Habilidades  \\\n",
+      "0        NaN                                NaN   \n",
+      "1        NaN      Data Governance, Data Science   \n",
+      "2        NaN  Data Analysis, Data Visualization   \n",
+      "3        NaN                                NaN   \n",
+      "4        NaN  Data Analysis, Data Visualization   \n",
+      "\n",
+      "                     Herramientas  \\\n",
+      "0                Excel, R, Python   \n",
+      "1                         Tableau   \n",
+      "2  Excel, Tableau, Excel, Tableau   \n",
+      "3                             NaN   \n",
+      "4                Excel, R, Python   \n",
+      "\n",
+      "                                           Educación  \n",
+      "0  Licenciatura, Licenciatura, Licenciatura, Lice...  \n",
+      "1                                  Bachelor's Degree  \n",
+      "2                                                NaN  \n",
+      "3                                  Bachelor's Degree  \n",
+      "4  Bachelor's degree, Bachelor's degree, Bachelor...  \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\guerc\\AppData\\Local\\Temp\\ipykernel_6188\\2566328237.py:11: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "C:\\Users\\guerc\\AppData\\Local\\Temp\\ipykernel_6188\\2566328237.py:12: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "C:\\Users\\guerc\\AppData\\Local\\Temp\\ipykernel_6188\\2566328237.py:13: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# Cargar los datos desde un archivo CSV\n",
+    "data = pd.read_csv('finalResult.csv')\n",
+    "\n",
+    "# Verificar las primeras filas de los datos\n",
+    "print(data.head())\n",
+    "\n",
+    "# Preparar los datos para el clustering (selecciona las características relevantes)\n",
+    "X = data[['Puesto', 'Expertise', 'Sector']]\n",
+    "\n",
+    "# Convertir variables categóricas a numéricas\n",
+    "X['Puesto'] = X['Puesto'].astype('category').cat.codes\n",
+    "X['Expertise'] = X['Expertise'].astype('category').cat.codes\n",
+    "X['Sector'] = X['Sector'].astype('category').cat.codes\n",
+    "\n",
+    "# Aplicar K-means para segmentar los datos\n",
+    "kmeans = KMeans(n_clusters=3, random_state=0)\n",
+    "data['Segmento'] = kmeans.fit_predict(X)\n",
+    "\n",
+    "# Visualizar la cantidad de ofertas por segmento\n",
+    "segment_counts = data['Segmento'].value_counts().reset_index()\n",
+    "segment_counts.columns = ['Segmento', 'Cantidad']\n",
+    "\n",
+    "# Gráfico de barras mostrando la cantidad de ofertas por segmento\n",
+    "fig_barras = go.Figure(data=[\n",
+    "    go.Bar(x=segment_counts['Segmento'], y=segment_counts['Cantidad'], \n",
+    "           marker=dict(color='royalblue'))\n",
+    "])\n",
+    "\n",
+    "# Configurar el layout del gráfico de barras\n",
+    "fig_barras.update_layout(\n",
+    "    title='Cantidad de Ofertas por Segmento',\n",
+    "    xaxis_title='Segmento',\n",
+    "    yaxis_title='Cantidad de Ofertas'\n",
+    ")\n",
+    "\n",
+    "# Guardar el gráfico como archivo HTML y abrirlo en el navegador\n",
+    "pio.write_html(fig_barras, 'grafico_barras.html')\n",
+    "import webbrowser\n",
+    "webbrowser.open('grafico_barras.html')\n",
+    "\n",
+    "# Gráfico de dispersión mostrando los diferentes segmentos\n",
+    "fig_dispersion = go.Figure()\n",
+    "\n",
+    "# Agregar trazas para cada segmento\n",
+    "for segmento in data['Segmento'].unique():\n",
+    "    seg_data = data[data['Segmento'] == segmento]\n",
+    "    fig_dispersion.add_trace(go.Scatter(\n",
+    "        x=seg_data['Puesto'], \n",
+    "        y=seg_data['Expertise'], \n",
+    "        mode='markers',\n",
+    "        name=f'Segmento {segmento}',\n",
+    "        text=seg_data['Descripción'],  # Mostrar descripción al pasar el ratón\n",
+    "        marker=dict(size=10)\n",
+    "    ))\n",
+    "\n",
+    "# Configurar el layout del gráfico de dispersión\n",
+    "fig_dispersion.update_layout(\n",
+    "    title='Resultados del Análisis de Segmentación',\n",
+    "    xaxis_title='Puesto',\n",
+    "    yaxis_title='Expertise',\n",
+    "    legend_title='Segmentos',\n",
+    "    hovermode='closest'\n",
+    ")\n",
+    "\n",
+    "# Guardar el gráfico de dispersión como archivo HTML y abrirlo en el navegador\n",
+    "pio.write_html(fig_dispersion, 'grafico_dispersion.html')\n",
+    "webbrowser.open('grafico_dispersion.html')\n"
    ]
   },
   {
