--- a/03.empleo_analisis.ipynb
+++ b/03.empleo_analisis.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('Datos_definitivos.csv')"
+    "df = pd.read_csv('Datos_postlimpieza.csv')"
    ]
   },
   {
