--- a/02.empleo_limpieza.ipynb
+++ b/02.empleo_limpieza.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -221,6 +221,7 @@
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from selenium.common.exceptions import TimeoutException, StaleElementReferenceException\n",
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder, StandardScaler\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "from time import sleep\n",
@@ -228,7 +229,6 @@
     "import sqlite3\n",
     "import re\n",
     "from sklearn.cluster import KMeans\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "import plotly.io as pio\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
@@ -1245,6 +1245,76 @@
    ],
    "source": [
     "df_final.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   sueldo_min  sueldo_max  ...  Herramientas_97  Herramientas_98\n",
+      "0       50000       70000  ...              0.0              0.0\n",
+      "1       50000       70000  ...              1.0              0.0\n",
+      "2       30000       50000  ...              0.0              0.0\n",
+      "3       50000       70000  ...              0.0              1.0\n",
+      "4       50000       70000  ...              0.0              0.0\n",
+      "\n",
+      "[5 rows x 1936 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Función para aplicar encoders a las columnas categóricas del dataset específico\n",
+    "def apply_encoders_to_custom_data(df):\n",
+    "    # Identificar las columnas numéricas y categóricas\n",
+    "    categorical_columns = df.select_dtypes(include=['object']).columns\n",
+    "    numerical_columns = df.select_dtypes(exclude=['object']).columns\n",
+    "\n",
+    "    # Crear un diccionario para almacenar los encoders\n",
+    "    label_encoders = {}\n",
+    "    onehot_encoders = {}\n",
+    "\n",
+    "    # Aplicar LabelEncoder a las columnas categóricas con pocas categorías\n",
+    "    for col in categorical_columns:\n",
+    "        if df[col].nunique() <= 10:  # Umbral de cardinalidad baja\n",
+    "            label_encoder = LabelEncoder()\n",
+    "            df[col] = label_encoder.fit_transform(df[col])\n",
+    "            label_encoders[col] = label_encoder\n",
+    "\n",
+    "    # Aplicar OneHotEncoder a las columnas con alta cardinalidad\n",
+    "    for col in categorical_columns:\n",
+    "        if df[col].nunique() > 10:  # Umbral de cardinalidad alta\n",
+    "            onehot_encoder = OneHotEncoder(sparse_output=False)  # Usar sparse_output en lugar de sparse\n",
+    "            transformed = onehot_encoder.fit_transform(df[[col]])\n",
+    "            # Crear nuevas columnas con los valores transformados\n",
+    "            df = pd.concat([df, pd.DataFrame(transformed, columns=[f\"{col}_{i}\" for i in range(transformed.shape[1])])], axis=1)\n",
+    "            df = df.drop(columns=[col])  # Eliminar la columna original\n",
+    "            onehot_encoders[col] = onehot_encoder\n",
+    "\n",
+    "    # Guardar los LabelEncoders en archivos pickle\n",
+    "    for col, encoder in label_encoders.items():\n",
+    "        with open(f\"{col}_label_encoder.pkl\", 'wb') as f:\n",
+    "            pickle.dump(encoder, f)\n",
+    "\n",
+    "    # Guardar los OneHotEncoders en archivos pickle\n",
+    "    for col, encoder in onehot_encoders.items():\n",
+    "        with open(f\"{col}_onehot_encoder.pkl\", 'wb') as f:\n",
+    "            pickle.dump(encoder, f)\n",
+    "\n",
+    "    return df, label_encoders, onehot_encoders\n",
+    "\n",
+    "# Cargar el dataset\n",
+    "df = pd.read_csv('Datos_pre_analisis.csv')\n",
+    "\n",
+    "# Aplicar encoders al dataset\n",
+    "df_encoded, label_encoders, onehot_encoders = apply_encoders_to_custom_data(df)\n",
+    "\n",
+    "# Mostrar el dataframe codificado\n",
+    "print(df_encoded.head())\n"
    ]
   },
   {
